--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-  
-} */
+body {
+  background-color: white;
+}
+
+.shadow-text {
+    text-shadow: 8px 2px 3px rgba(0, 0, 0, 0.3);
+  }
